--- a/package.json
+++ b/package.json
@@ -36,23 +36,24 @@
 		"monitoring"
 	],
 	"scripts": {
-		"dev": "(npm run tsc-watch -- --preserveWatchOutput & p1=$!; npm run rollup-build -- --watch & p2=$!; wait $p1 $p2)",
+		"build-docs": "typedoc --out docs src",
 		"build": "rimraf dist .tmp && node scripts/write-version.js && npm run prettier -- --write && npm run tsc && npm run rollup-build && npm run minify",
-		"minify": "terser dist/async-monitor.cjs -o dist/async-monitor.min.cjs && terser dist/async-monitor.esm.js -o dist/async-monitor.min.esm.js && terser dist/async-monitor.amd.js -o dist/async-monitor.min.amd.js && terser dist/async-monitor.umd.js -o dist/async-monitor.min.umd.js",
-		"rollup-build": "rollup -c ./rollup.config.js",
-		"tsc": "tsc",
-		"tsc-watch": "tsc --watch",
+		"dev": "(npm run tsc-watch -- --preserveWatchOutput & p1=$!; npm run rollup-build -- --watch & p2=$!; wait $p1 $p2)",
 		"examples": "npx serve .",
-		"test": "npm run test-lint",
-		"test-lint": "npm run prettier -- --check",
 		"lint": "npm run prettier -- --write",
-		"prettier": "prettier .",
+		"minify": "terser dist/async-monitor.cjs -o dist/async-monitor.min.cjs && terser dist/async-monitor.esm.js -o dist/async-monitor.min.esm.js && terser dist/async-monitor.amd.js -o dist/async-monitor.min.amd.js && terser dist/async-monitor.umd.js -o dist/async-monitor.min.umd.js",
 		"prepare": "npm run test && npm run build",
-		"version": "npm test && git add .",
-		"release:patch": "npm version patch --message 'v%s' && npm publish && npm run _release:push-branch",
-		"release:minor": "npm version minor --message 'v%s' && npm publish && npm run _release:push-branch",
+		"prettier": "prettier .",
 		"release:major": "npm version major --message 'v%s' && npm publish && npm run _release:push-branch",
-		"_release:push-branch": "git push --follow-tags --set-upstream origin main"
+		"release:minor": "npm version minor --message 'v%s' && npm publish && npm run _release:push-branch",
+		"release:patch": "npm version patch --message 'v%s' && npm publish && npm run _release:push-branch",
+		"_release:push-branch": "git push --follow-tags --set-upstream origin main",
+		"rollup-build": "rollup -c ./rollup.config.js",
+		"test-lint": "npm run prettier -- --check",
+		"test": "npm run test-lint",
+		"tsc-watch": "tsc --watch",
+		"tsc": "tsc",
+		"version": "npm test && git add ."
 	},
 	"author": "monitor.js contributors (https://github.com/manulykebe/async-monitor.js/graphs/contributors)",
 	"devDependencies": {
@@ -67,6 +68,7 @@
 		"terser": "^5.34.1",
 		"ts-jest": "^29.2.5",
 		"tslib": "^2.7.0",
+		"typedoc": "^0.26.10",
 		"typescript": "^5.6.2"
 	}
 }
