--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@babel/preset-env": "^7.25.4",
 		"@types/jest": "^29.5.13",
 		"babel-jest": "^29.7.0",
+		"coveralls": "^3.1.1",
 		"editorconfig": "^2.0.0",
 		"prettier": "^3.3.3",
 		"rimraf": "^6.0.1",
