--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Submit coverage to Coveralls
         env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_REPO_TOKEN: 1up0f1umSgk9JNetpHN9gxwFxbvlWTjeh
         run: npx coveralls < ./coverage/lcov.info
