--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests with coverage
-        run: npm test -- --coverage
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.3.4
 
       - name: Submit coverage to Coveralls
         env:
