--- a/package.json
+++ b/package.json
@@ -73,5 +73,9 @@
 		"tslib": "^2.7.0",
 		"typedoc": "^0.26.10",
 		"typescript": "^5.6.2"
+	},
+	"dependencies": {
+		"tough-cookie": "^5.0.0",
+		"uuid": "^11.0.2"
 	}
 }
