remove coverage for now

--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"_release:push-branch": "git push --follow-tags --set-upstream origin main",
 		"rollup-build": "rollup -c ./rollup.config.js",
 		"test-lint": "npm run prettier -- --check",
-		"test": "npm run test-lint && jest --coverage",
+		"test": "npm run test-lint",
+		"test-cover": "jest --coverage",
 		"tsc-watch": "tsc --watch",
 		"tsc": "tsc",
 		"update-package-lock": "rm -f package-lock.json && npm install",
